<resources>
    <string name="app_name">Smart Light</string>
    <string name="title_activity_main2">MainActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>

    <string name="location_permission_denied">This app requires location permission to enable the \'my location\' layer. Please try again and grant access to use the location.\nIf the permission has been permanently denied, it can be enabled from the System Settings &gt; Apps &gt; \'Google Maps API Demos\'.</string>
    <string name="permission_required_toast">Location permission is required for this app.</string>
    <string name="permission_rationale_location">Access to the location service is required to demonstrate the \'my location\' feature, which shows your current location on the map.</string>
    //
    <string name="connecting_device_message">Đang kết nối với thiết bị</string>
    <string name="esptouch1_configure_result_failed">EspTouch failed</string>
    <string name="esptouch1_configure_result_success_item">BSSID = %1$s, InetAddress = %2$s</string>
    <string name="esptouch1_configure_result_success">EspTouch</string>
    <string name="esptouch1_configure_result_failed_port">Create EspTouch task failed, the EspTouch port could be used by other thread</string>
    <string name="esptouch_message_wifi_connection">Please connect Wi-Fi first.</string>
    <string name="esptouch_message_wifi_frequency">Current Wi-Fi connection is 5G, but the device just support 2.4G.</string>
    <string name="add_device_title">Thêm thiết bị</string>
    <string name="wifi">WIFI:</string>
    <string name="password">Password</string>
    <string name="add">Thêm</string>
    <string name="add_scenario_title">Tạo kịch bản</string>
    <string name="name">Tên</string>
    <string name="if_text">Nếu</string>
    <string name="add_condition">Thêm điều kiện</string>
    <string name="then">Thì</string>
    <string name="add_action">Thêm hành động</string>
    <string name="create">Tạo</string>
    <string name="auto_feature">Tính năng tự động</string>
    <string name="on">Bật</string>
</resources>