<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <RelativeLayout
        android:id="@+id/rl_root"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:clickable="true"
        android:focusableInTouchMode="true"
        android:background="@color/primary">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/primary"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="56dp">

                <androidx.appcompat.widget.AppCompatImageView
                    android:id="@+id/iv_back"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginStart="20dp"
                    android:src="@drawable/ic_baseline_arrow_back_ios_new_24"
                    android:tint="@color/title_text" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:layout_marginStart="10dp"
                    android:text="@string/add_scenario_title"
                    android:textColor="@color/title_text"
                    android:textSize="17sp" />
            </RelativeLayout>

            <androidx.core.widget.NestedScrollView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/primary">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:background="@color/primary"
                    android:orientation="vertical">

                    <com.google.android.material.textfield.TextInputLayout
                        android:id="@+id/tl_name"
                        style="@style/TextInputLayoutStyle"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="20dp"
                        android:layout_marginTop="10dp"
                        android:hint="@string/name"
                        android:textColorHint="@color/normal_text"
                        app:errorEnabled="true">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/et_name"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:singleLine="true"
                            tools:text="Scenario"
                            android:textColor="@color/title_text" />
                    </com.google.android.material.textfield.TextInputLayout>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/if_text"
                        android:textColor="@color/title_text"
                        android:textSize="20sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_input"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_add_input"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:animateLayoutChanges="true"
                        app:cardBackgroundColor="@color/secondary"
                        app:cardCornerRadius="10dp">

                        <RelativeLayout
                            android:id="@+id/rl_view"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:id="@+id/tv_title"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="10dp"
                                android:text="@string/add_condition"
                                android:textColor="@color/normal_text"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                tools:ignore="RelativeOverlap" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_alignParentEnd="true"
                                app:cardBackgroundColor="@color/bluef5"
                                app:cardCornerRadius="25dp">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/ic_baseline_add_24"
                                    android:tint="@color/white" />
                            </androidx.cardview.widget.CardView>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.appcompat.widget.AppCompatTextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="20dp"
                        android:layout_marginTop="10dp"
                        android:text="@string/then"
                        android:textColor="@color/title_text"
                        android:textSize="20sp" />

                    <androidx.recyclerview.widget.RecyclerView
                        android:id="@+id/rv_output"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content" />

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_add_output"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_margin="20dp"
                        android:animateLayoutChanges="true"
                        app:cardBackgroundColor="@color/secondary"
                        app:cardCornerRadius="10dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_margin="15dp">

                            <androidx.appcompat.widget.AppCompatTextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerVertical="true"
                                android:layout_marginStart="10dp"
                                android:text="@string/add_action"
                                android:textColor="@color/normal_text"
                                android:textSize="15sp"
                                android:textStyle="bold"
                                tools:ignore="RelativeOverlap" />

                            <androidx.cardview.widget.CardView
                                android:layout_width="30dp"
                                android:layout_height="30dp"
                                android:layout_alignParentEnd="true"
                                app:cardBackgroundColor="@color/bluef5"
                                app:cardCornerRadius="25dp">

                                <androidx.appcompat.widget.AppCompatImageView
                                    android:layout_width="20dp"
                                    android:layout_height="20dp"
                                    android:layout_gravity="center"
                                    android:src="@drawable/ic_baseline_add_24"
                                    android:tint="@color/white" />
                            </androidx.cardview.widget.CardView>
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                    <androidx.cardview.widget.CardView
                        android:id="@+id/cv_create"
                        style="@style/clickableCard"
                        android:layout_width="120dp"
                        android:layout_height="45dp"
                        android:layout_gravity="center_horizontal"
                        android:layout_marginTop="30dp"
                        app:cardBackgroundColor="@color/bluef5"
                        app:cardCornerRadius="60dp">

                        <androidx.appcompat.widget.AppCompatTextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center"
                            android:text="@string/create"
                            android:textColor="@color/white"
                            android:textSize="17sp" />
                    </androidx.cardview.widget.CardView>
                </LinearLayout>
            </androidx.core.widget.NestedScrollView>
        </LinearLayout>
    </RelativeLayout>
</layout>